# ai_ops_assistant_gemini

./: .env.docker  .env.example  .env.txt  .gitignore  AI_OPS_API_GUILD.md  CLAUDE.md  CLICKHOUSE_API_GUIDE.md  Docker 化部署方案技術規格.markdown  FRONTEND_LAYOUT_GUIDE.md  README-Docker.md  docker-compose.example.yml  docker-compose.override.yml  docker-compose.yml  fake_file.txt  pyproject.toml  test_clickhouse_api_fixed.py  topology.md
.claude/: settings.local.json
WEB_APP/backend/: .dockerignore  Dockerfile  ai_service.py  async_task_manager.py  background_tasks.py  clickhouse.py  clickhouse_client.py  clickhouse_models.py  clickhouse_routes.py  clickhouse_service.py  common.py  config_manager.py  exceptions.py  formatters.py  main.py  main_old.py  network.py  prompt_manager.py  pyproject.toml  requirements.txt  settings.py  task_manager.py  unified_routes.py  utils.py
WEB_APP/backend/ai/: __init__.py  llm_factory.py  prompt_manager.py  service.py  token_calculator.py
WEB_APP/backend/ai/prompts/config/: language_config.yaml  variables.yaml
WEB_APP/backend/ai/prompts/zh_TW/: system_prompt.j2
WEB_APP/backend/clickhouse/: __init__.py  client.py  models.py  routes.py  service.py  tools.py
WEB_APP/backend/config/: backend_settings.yaml  devices.example.json  devices.json  env  frontend_settings.yaml  groups.example.json  groups.json  nornir_defaults.yaml  nornir_groups.yaml  nornir_hosts.yaml  security.json
WEB_APP/backend/core/: __init__.py  error_codes.py  exceptions.py  network_tools.py  nornir_integration.py  settings.py
WEB_APP/backend/core/prompt_manager/: __init__.py  exceptions.py  manager.py
WEB_APP/backend/models/: __init__.py  ai_response.py  common.py
WEB_APP/backend/prompts/config/: examples.yaml  tools.yaml  variables.yaml
WEB_APP/backend/prompts/zh_TW/: react_examples.j2  system_prompt.j2  tool_descriptions.j2
WEB_APP/backend/routers/: __init__.py  admin_routes.py  dependencies.py  device_routes.py  execution_routes.py  task_routes.py
WEB_APP/backend/templates/prompts/config/: examples.yaml  tools.yaml  variables.yaml
WEB_APP/backend/templates/prompts/zh_TW/: react_examples.j2  system_prompt.j2  tool_descriptions_no_search.j2  tool_descriptions_with_search.j2
WEB_APP/frontend/: .dockerignore  .gitignore  .prettierrc  CLAUDE.md  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
WEB_APP/frontend/.claude/: settings.local.json
WEB_APP/frontend/src/: App.tsx  AppOptimized.tsx  main.tsx
WEB_APP/frontend/src/api/: TaskPoller.ts  client.ts  index.ts  services.ts
WEB_APP/frontend/src/components/: DevPerformanceMonitor.tsx  DevToolsLazy.tsx  index.ts
WEB_APP/frontend/src/config/: api.ts  app.ts  index.ts  logger.ts  ui.ts
WEB_APP/frontend/src/constants/: app.ts  index.ts  keyboard.ts  ui.ts
WEB_APP/frontend/src/errors/: ErrorBoundaryProvider.tsx  ErrorClassifier.ts  ErrorLogger.ts  ErrorNotification.tsx  components.tsx  constants.ts  context.ts  hooks.ts  index.ts  types.ts
WEB_APP/frontend/src/hooks/: index.ts  useAppSelector.ts  useAppStatus.ts  useAsyncTasks.ts  useBatchExecution.ts  useBatchExecutionRefactored.ts  useDebounceSearch.ts  useDeviceFilter.ts  useDeviceGroups.ts  useDevices.ts  useExecutionErrorHandler.ts  useExecutionState.ts  useKeyboardShortcuts.ts  useLogger.ts  useOptimizedAppState.ts  useOptimizedStoreSelectors.ts  usePerformanceMonitor.ts  usePrefetch.ts  useProgressManager.ts  useSmartPrefetch.ts  useSmartPreload.ts  useStoreActions.ts  useTimer.ts  useVirtualIntersection.ts
WEB_APP/frontend/src/services/: index.ts
WEB_APP/frontend/src/store/: appStore.ts  createSelectors.ts  index.ts  progressTimer.ts  selectors.ts  storeMiddlewares.ts
WEB_APP/frontend/src/styles/: index.css
WEB_APP/frontend/src/types/: api.ts  apiResponses.ts  components.ts  index.ts  logger.ts  store.ts
WEB_APP/frontend/src/utils/: LRUCache.ts  LoggerService.ts  RequestDeduplicator.ts  SimpleLogger.ts  apiCallHelper.ts  cacheStrategies.ts  commonHandlers.ts  envTest.ts  errorHandler.ts  logger.ts  performanceMonitor.ts  performanceTest.ts  queryClient.ts  (+4 more)
proxy-data/: database.sqlite  keys.json
proxy-data/nginx/proxy_host/: 1.conf
ref/: backend_main.py
traefik/: traefik.yml
(+104 files in other folders)
